@@ -1,3 +1,9 @@
+2004-03-08 Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml/openvrml/browser.cpp (proto_node::proto_node):
+	Initialize PROTO exposedFields with the initial value from the
+	constructor.
+
 2004-03-07 Braden McDaniel  <braden@endoframe.com>
 
 	* src/libopenvrml/openvrml/browser.cpp (proto_node::proto_node):
